small tweak on links: protocal part is removed from urls

--- a/partials/additional_content.html
+++ b/partials/additional_content.html
@@ -2,7 +2,7 @@
 One initiates the software review process by reporting the software as described in NPR 2210.1C (e.g.,
 submitting a description of the software to be released, the individuals involved in its creation, development
 timeline, available documentation, and related topics). Depending on center procedures, this information may
-be captured through the <a href="https://ntr.ndc.nasa.gov/">NASA Technology Reporting System</a> or standard
+be captured through the <a href="//ntr.ndc.nasa.gov/">NASA Technology Reporting System</a> or standard
 form NF1679. Contact your SRA for the specific procedure used at your center.
 <br/>
 Each piece of software is unique, and must be reviewed on a case-by-case basis. Generally speaking, however, the
