--- a/partials/footer.html
+++ b/partials/footer.html
@@ -9,7 +9,7 @@
       </div>
       <div class="col-xs-12 col-sm-6">
         <div class="footer2">
-          <span style="margin-right: 3px;"><a href="http://open.nasa.gov/">A NASA Open Government Initiative Website</a></span>
+          <span style="margin-right: 3px;"><a href="//open.nasa.gov/">A NASA Open Government Initiative Website</a></span>
         </div>
       </div>
     </div>
