--- a/partials/guide_content.html
+++ b/partials/guide_content.html
@@ -1,5 +1,5 @@
 <p>
-Software release at NASA is governed by <a href="http://nodis3.gsfc.nasa.gov/displayDir.cfm?t=NPR&c=2210&s=1C">NPR 2210.1C</a>.
+Software release at NASA is governed by <a href="//nodis3.gsfc.nasa.gov/displayDir.cfm?t=NPR&c=2210&s=1C">NPR 2210.1C</a>.
 NPR 2210.1C establishes the roles, responsibilities, and
 procedures for reporting, reviewing, and releasing software under various conditions, including open source.
 Every center has a Software Release Authority (SRA). The SRA processes requests for software release and
