Partials: ng-include src -> ng-include

--- a/partials/guide.html
+++ b/partials/guide.html
@@ -1,11 +1,11 @@
-<div ng-include src="'partials/header.html'"></div>
+<div ng-include="'partials/header.html'"></div>
 
 
 <div class="container hidePhone" style="margin-top: 30px;">
   <div class="row">
     <div class="col-xs-12 box">
       <h3>Overview</h3>
-      <div ng-include src="'partials/guide_content.html'"></div>
+      <div ng-include="'partials/guide_content.html'"></div>
     </div>
   </div>
 
@@ -30,7 +30,7 @@
 
 
   <div class="row">
-    <div ng-include src="'partials/sra_content.html'"></div>
+    <div ng-include="'partials/sra_content.html'"></div>
   </div>
   <div class="row">
     <div class="col-xs-12">
@@ -40,7 +40,7 @@
   <div class="row">
     <div class="col-xs-12 box">
       <h3>Additional Details</h3>
-      <div ng-include src="'partials/additional_content.html'"></div>
+      <div ng-include="'partials/additional_content.html'"></div>
     </div>
   </div>
 </div> <!-- end hidePhone -->
@@ -53,7 +53,7 @@
         <div class="panel">
           <a type="button" data-toggle="collapse" data-target="#collapsible-1" data-parent="#myAccordion">Overview</a>
           <div id="collapsible-1" class="collapse in">
-            <div ng-include src="'partials/guide_content.html'"></div>
+            <div ng-include="'partials/guide_content.html'"></div>
           </div>
         </div>
         <div class="panel">
@@ -65,13 +65,13 @@
         <div class="panel">
           <a type="button" data-toggle="collapse" data-target="#collapsible-2" data-parent="#myAccordion">Center SRA's</a>
           <div id="collapsible-2" class="collapse">
-            <div ng-include src="'partials/sra_content.html'"></div>
+            <div ng-include="'partials/sra_content.html'"></div>
           </div>
         </div>
         <div class="panel">
           <a type="button" data-toggle="collapse" data-target="#collapsible-3" data-parent="#myAccordion">Additional Details</a>
           <div id="collapsible-3" class="collapse">
-            <div ng-include src="'partials/additional_content.html'"></div>
+            <div ng-include="'partials/additional_content.html'"></div>
           </div>
         </div>
       </div>
@@ -80,4 +80,4 @@
 </div>
 
 
-<div ng-include src="'partials/footer.html'"></div>
+<div ng-include="'partials/footer.html'"></div>
