--- a/partials/main.html
+++ b/partials/main.html
@@ -1,4 +1,4 @@
-<div ng-include src="'partials/header.html'"></div>
+<div ng-include="'partials/header.html'"></div>
 
 <div class="container docstart">
   <div class="row">
@@ -51,7 +51,7 @@
           </div>
         </div>
         <div class="socialIcons hidden-xs">
-          <div ng-include src="'partials/sociallinks.html'"></div>
+          <div ng-include="'partials/sociallinks.html'"></div>
         </div>
         <div style="clear: both;"></div>
         <div class="repoLink hidePhone">
@@ -70,7 +70,7 @@
 
             <div class="visible-xs">
               <div class="socialIcons-xs">
-                <div ng-include src="'partials/sociallinks.html'"></div>
+                <div ng-include="'partials/sociallinks.html'"></div>
               </div>
               <div style="clear: both;"></div>
             </div>
@@ -97,21 +97,21 @@
             </div>
             <div ng-show="showMore">
               <div class="details" style="margin-top:10px;">
-                <div ng-include src="'partials/tags.html'"></div>
+                <div ng-include="'partials/tags.html'"></div>
               </div>
-              <div ng-include src="'partials/licenses.html'"></div>
+              <div ng-include="'partials/licenses.html'"></div>
             </div>
           </div>
           <div class="hidden-xs col-sm-3" style="">
             <div class="details">
-              <div ng-include src="'partials/tags.html'"></div>
+              <div ng-include="'partials/tags.html'"></div>
             </div>
           </div>
           <div style="clear: both;"></div>
         </div>
         <div class="row">
           <div class="col-sm-8 hidden-xs">
-            <div ng-include src="'partials/licenses.html'"></div>
+            <div ng-include="'partials/licenses.html'"></div>
           </div>
           <div style="clear:both;"></div>
         </div>
@@ -120,4 +120,4 @@
   </div>
 </div>
 
-<div ng-include src="'partials/footer.html'"></div>
+<div ng-include="'partials/footer.html'"></div>
