--- a/partials/share.html
+++ b/partials/share.html
@@ -1,4 +1,4 @@
-<div ng-include src="'partials/header.html'"></div>
+<div ng-include="'partials/header.html'"></div>
 
 
 <div class="container" style="margin-top: 30px;">
@@ -20,4 +20,4 @@
 </div>
 
 
-<div ng-include src="'partials/footer.html'"></div>
+<div ng-include="'partials/footer.html'"></div>
